--- a/src/components/ButtonStyles.css
+++ b/src/components/ButtonStyles.css
@@ -7,6 +7,7 @@
   background-color: rgb(252, 121, 170);
   border-style: none;
   color: white;
+  font-size: 20px;
   margin: 10px;
   transition: background-color 0.4s;
   transition: transform 0.4s ease;
